--- a/package.json
+++ b/package.json
@@ -17,7 +17,14 @@
     "mysql2": "^3.12.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.19.0",
+    "eslint": "^9.19.0",
+    "eslint-plugin-jest": "^28.11.0",
+    "globals": "^15.14.0",
     "jest": "^29.7.0",
-    "supertest": "^6.3.4"
-  }
+    "supertest": "^6.3.4",
+    "typescript-eslint": "^8.22.0"
+  },
+  "keywords": [],
+  "author": ""
 }
