--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "cd src && node index.js",
     "run": "cd src && node index.js",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint ."
   },
   "license": "MIT",
   "dependencies": {
@@ -17,8 +18,8 @@
     "mysql2": "^3.12.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.19.0",
-    "eslint": "^9.19.0",
+    "@eslint/js": "^9.20.0",
+    "eslint": "^9.20.1",
     "eslint-plugin-jest": "^28.11.0",
     "globals": "^15.14.0",
     "jest": "^29.7.0",
